# kombucha-tracker

./: Cargo.toml  README.md  TODO.md
.cargo/: config
backend/: .env  Cargo.toml
backend/src/: handlers.rs  lib.rs  main.rs  routes.rs
backend/src/app/: create.rs  delete.rs  get.rs  mod.rs  update.rs
data/: Cargo.toml
data/src/: entry.rs  fermentation.rs  fermentation_status.rs  id.rs  kombucha.rs  lib.rs
data/src/db/: entry.rs  fermentation.rs  kombucha.rs  mod.rs
db/: Migrant.toml  start_docker.sh
db/migrations/20200417211947_init/: down.sql  up.sql
db/migrations/20200421172246_fermentation/: down.sql  up.sql
db/test_data/: 1.sql
frontend/: .gitignore  Cargo.toml  README.md  index.html  main.js  rebuild.sh  rustfmt.toml  start_server.sh
frontend/.cargo/: config
frontend/src/: app.rs  fermentation.rs  lib.rs
frontend/src/components/: app.rs  error_view.rs  kombucha_panel.rs  kombucha_view.rs  mod.rs
frontend/src/data/: entry.rs  fermentation.rs  kombucha.rs  mod.rs
frontend/www/: index.css  index.html  main.js
xtask/: Cargo.toml
xtask/src/: main.rs
