[package]
name = "kombucha-tracker-frontend"
edition = "2018"
license = "MIT/Apache-2.0"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.60"
yew = { version = "0.14.3", features = ["web_sys"] }
web-sys = { version = "0.3.37", features = ["Window", "Request"] }
anyhow = "1.0.28"
log = "0.4.8"
chrono = { version = "0.4.11", features = ["wasmbind"] }
derive_more = "0.99.5"
web_logger = "0.2.0"
console_error_panic_hook = "0.1.6"
data-types = { path = "../data" }
